(fix): max width to avoid stretching

--- a/app/src/controllers/home/homepage/homepage.scss
+++ b/app/src/controllers/home/homepage/homepage.scss
@@ -133,10 +133,11 @@ minds-homepage{
   }
 
   .m-homepage-stream{
+    max-width:1100px;
     padding:$minds-padding !important;
     section{
       display:block;
-      padding:$minds-padding*2;
+      padding:$minds-padding*1.5;
       height:auto;
 
       minds-activity{
